--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600;700&display=swap');
 
 body {
-    font-family: 'Cabin';
+    font-family: 'Roboto Mono';
     background-color: #758190;
 }
 
@@ -11,6 +12,7 @@ body {
 
 .header {
     display: flex;
+    /* justify-content: space-between; */
     background-color: lightblue;
     padding: 1%;
     align-items: center;
@@ -21,6 +23,14 @@ body {
 
 .stats-container {
     display: flex;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: 0 0 30px;
+    text-align: center;
+}
+
+.stats-container:hover {
+    background-color: lightblue;
 }
 
 .stats-card {
@@ -28,8 +38,9 @@ body {
     border-radius: 7px;
     padding: 1%;
     margin: 1%;
-    width: 100%;
+    width: 47%;
     text-align: center;
+    align-items: center;
 }
 
 #num-contributions, #total-raised, #num-games {
@@ -40,19 +51,21 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+
 }
 
 .game-img {
-    width: 100%;
+    width: 45%;
     border-radius: 5px;
     box-shadow: 0 0 10px #FFFFFF;
+    border-radius: 25%;
 }
 
 .game-card {
     background-color: #FFFFFF;
     padding: 1%;
     margin: 1%;
-    width: 300px;
+    width: 45%;
     text-align: center;
     border-radius: 7px;
 }
@@ -67,9 +80,43 @@ body {
 }
 
 button {
-    font-family: 'Cabin';
+    font-family: 'Roboto Mono';
     border: none;
     padding: 1%;
     margin: 1%;
     border-radius: 7px;
+}
+
+button:hover {
+    background-color: beige;
+}
+
+#description-container {
+    text-align: center;
+}
+
+.our-games {
+    /* text-align: right; */
+    /* align-items: end; */
+    color: black;
+    display: flex;
+    margin-left: auto;
+    padding-left: 25%;
+}
+
+.our-games:link {
+    text-decoration: none;
+}
+
+.our-games:visited {
+    text-decoration: none;
+}
+
+.our-games:hover {
+    color:brown;
+    text-decoration: none;
+}
+
+.our-games:active {
+    text-decoration: none;
 }
